--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.json",
   "dependencies": {
     "@gatsbyjs/parcel-namer-relative-to-cwd": "^1.9.0",
-    "@parcel/config-default": "^2.7.0",
-    "parcel-resolver-ignore": "^2.1.3"
+    "@parcel/config-default": "^2.7.0"
   }
 }
