--- a/package.json
+++ b/package.json
@@ -6,9 +6,6 @@
   "dependencies": {
     "@gatsbyjs/parcel-namer-relative-to-cwd": "^1.9.0",
     "@parcel/config-default": "^2.7.0",
-    "@xenyo/parcel-resolver-ignore": "^2.1.4"
-  },
-  "parcelIgnore": [
-    ".*node_modules/.*"
-  ]
+    "parcel-resolver-ignore-node-modules": "^1.0.0"
+  }
 }
